--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ github_username:  Heeveloper
 email: zaqq1414@gmail.com
 
 
-description_footer: This pages record my development process!
+description_footer:
 
 # comments
 # two ways to comment, only choose one, and use your own short name
