--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ permalink: /:year/:month/:day/:title/
 
 # other links
 twitter_username: null
-facebook_username: gaohaoyang.water
+facebook_username: null
 github_username:  Heeveloper
 email: zaqq1414@gmail.com
 
@@ -32,8 +32,7 @@ disqus_shortname: heeveloper
 # 百度统计 id，将统计代码替换为自己的百度统计id，即
 # hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
 # xxxxx字符串
-baidu_tongji_id: cf8506e0ef223e57ff6239944e5d46a4
-google_analytics_id: 102414910 # google 分析追踪id
+google_analytics_id: UA-209009166-1 # google 分析追踪id
 
 # Build settings
 markdown: kramdown
